unpackaged/main/default/objects/WorkOrder/fields/Account_Manager_Notified__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Notified__c</fullName>
    <label>Account Manager Notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>