unpackaged/main/default/objects/WorkOrder/fields/AddStore__c.field-meta.xml
<CustomField>
    <fullName>AddStore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddStore</label>
    <type>Checkbox</type>
</CustomField>