unpackaged/main/default/objects/WorkOrder/fields/Advised__c.field-meta.xml
<CustomField>
    <fullName>Advised__c</fullName>
    <label>Advised Merchant to Destroy Manual Forms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>