unpackaged/main/default/objects/WorkOrder/fields/Amex__c.field-meta.xml
<CustomField>
    <fullName>Amex__c</fullName>
    <label>Amex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>