unpackaged/main/default/objects/WorkOrder/fields/Auto_Batch__c.field-meta.xml
<CustomField>
    <fullName>Auto_Batch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Batch</label>
    <type>Checkbox</type>
</CustomField>