unpackaged/main/default/objects/WorkOrder/fields/AX__c.field-meta.xml
<CustomField>
    <fullName>AX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AX</label>
    <type>Checkbox</type>
</CustomField>