unpackaged/main/default/objects/WorkOrder/fields/Capture_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Capture_Nationality__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Capture Nationality</label>
    <type>Checkbox</type>
</CustomField>