unpackaged/main/default/objects/WorkOrder/fields/Close_Shop__c.field-meta.xml
<CustomField>
    <fullName>Close_Shop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Shop</label>
    <type>Checkbox</type>
</CustomField>