unpackaged/main/default/objects/WorkOrder/fields/Closure_or_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Closure_or_Deactivation__c</fullName>
    <label>Closure or Deactivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Deactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>