unpackaged/main/default/objects/WorkOrder/fields/CVM_Confirmation_Received__c.field-meta.xml
<CustomField>
    <fullName>CVM_Confirmation_Received__c</fullName>
    <label>CVM Confirmation Received?</label>
    <type>Date</type>
</CustomField>