unpackaged/main/default/objects/WorkOrder/fields/Date_Set_to_Close_on_TF_Systems__c.field-meta.xml
<CustomField>
    <fullName>Date_Set_to_Close_on_TF_Systems__c</fullName>
    <label>Date Set to Close on TF Systems</label>
    <type>Date</type>
</CustomField>