unpackaged/main/default/objects/WorkOrder/fields/Date_Shop_Closing__c.field-meta.xml
<CustomField>
    <fullName>Date_Shop_Closing__c</fullName>
    <label>Date Shop Closing</label>
    <type>Date</type>
</CustomField>