unpackaged/main/default/objects/WorkOrder/fields/Date_to_Deactivate_Terminals__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Deactivate_Terminals__c</fullName>
    <label>Date to Deactivate Terminals</label>
    <type>Date</type>
</CustomField>