unpackaged/main/default/objects/WorkOrder/fields/Display_Vat_Option__c.field-meta.xml
<CustomField>
    <fullName>Display_Vat_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Vat Option</label>
    <type>Checkbox</type>
</CustomField>