unpackaged/main/default/objects/WorkOrder/fields/GBTF__c.field-meta.xml
<CustomField>
    <fullName>GBTF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBTF</label>
    <type>Checkbox</type>
</CustomField>