unpackaged/main/default/objects/WorkOrder/fields/HAT__c.field-meta.xml
<CustomField>
    <fullName>HAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HAT</label>
    <type>Checkbox</type>
</CustomField>