unpackaged/main/default/objects/WorkOrder/fields/In_Store_Solution__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Solution__c</fullName>
    <label>In-Store Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Forms</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>Acquiring</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>