unpackaged/main/default/objects/WorkOrder/fields/Integrated_Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Solution_Type__c</fullName>
    <label>Integrated Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PA 3rd Party</fullName>
            </value>
            <value>
                <fullName>PAOL</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>POL</fullName>
            </value>
            <value>
                <fullName>POL Pro</fullName>
            </value>
            <value>
                <fullName>PI (Elavon)</fullName>
            </value>
            <value>
                <fullName>PI (AX Integration)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>