unpackaged/main/default/objects/WorkOrder/fields/Merchant_Closure__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Closure__c</fullName>
    <formula>IF(New_Merchant_Closure__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Closure</label>
    <type>Text</type>
</CustomField>