unpackaged/main/default/objects/WorkOrder/fields/New_Merchant_Closure__c.field-meta.xml
<CustomField>
    <fullName>New_Merchant_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Merchant Closure</label>
    <type>Checkbox</type>
</CustomField>