unpackaged/main/default/objects/WorkOrder/fields/New_POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>New_POS_Solution__c</fullName>
    <formula>IF(New_POS_Solution_Request__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New POS Solution</label>
    <type>Text</type>
</CustomField>