unpackaged/main/default/objects/WorkOrder/fields/New_POS_Solution_Request__c.field-meta.xml
<CustomField>
    <fullName>New_POS_Solution_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New POS Solution Request?</label>
    <type>Checkbox</type>
</CustomField>