unpackaged/main/default/objects/WorkOrder/fields/No_Cash_Refund__c.field-meta.xml
<CustomField>
    <fullName>No_Cash_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Cash Refund</label>
    <type>Checkbox</type>
</CustomField>