unpackaged/main/default/objects/WorkOrder/fields/Parent_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Manager__c</fullName>
    <formula>Account.Parent.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Manager</label>
    <type>Text</type>
</CustomField>