unpackaged/main/default/objects/WorkOrder/fields/Parent_Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Manager_Email__c</fullName>
    <label>Parent Account Manager Email</label>
    <type>Email</type>
</CustomField>