unpackaged/main/default/objects/WorkOrder/fields/POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS Solution</label>
    <referenceTo>POS_Solution__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>