unpackaged/main/default/objects/WorkOrder/fields/Pre_Auths__c.field-meta.xml
<CustomField>
    <fullName>Pre_Auths__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Auths</label>
    <type>Checkbox</type>
</CustomField>