unpackaged/main/default/objects/WorkOrder/fields/Print__c.field-meta.xml
<CustomField>
    <fullName>Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Recovery UPS Shipment</label>
    <type>Checkbox</type>
</CustomField>