unpackaged/main/default/objects/WorkOrder/fields/Print_Large_Font__c.field-meta.xml
<CustomField>
    <fullName>Print_Large_Font__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Large Font</label>
    <type>Checkbox</type>
</CustomField>