unpackaged/main/default/objects/WorkOrder/fields/Printer_Type__c.field-meta.xml
<CustomField>
    <fullName>Printer_Type__c</fullName>
    <label>Printer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>Thermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>