unpackaged/main/default/objects/WorkOrder/fields/PSP__c.field-meta.xml
<CustomField>
    <fullName>PSP__c</fullName>
    <formula>POS_Solution__r.PSP1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSP</label>
    <type>Text</type>
</CustomField>