unpackaged/main/default/objects/WorkOrder/fields/Quantity_PAX__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PAX__c</fullName>
    <formula>IF(TEXT(Terminal_Type__c) = &quot;A920&quot;,  Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity PAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>