unpackaged/main/default/objects/WorkOrder/fields/Quantity_PTF__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PTF__c</fullName>
    <formula>IF(TEXT(Terminal_Type__c) = &quot;Samsung A10&quot;, Quantity__c,
IF(TEXT(Terminal_Type__c) = &quot;Samsung Tab Active2&quot;, Quantity__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity PTF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>