unpackaged/main/default/objects/WorkOrder/fields/Quantity_Vx__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Vx__c</fullName>
    <formula>IF(TEXT(Terminal_Type__c) = &quot;Vx520&quot;, Quantity__c,
IF(TEXT(Terminal_Type__c) = &quot;Vx680 3G&quot;, Quantity__c,
IF(TEXT(Terminal_Type__c) = &quot;Vx680 BT/Wi-Fi&quot;, Quantity__c,
IF(TEXT(Terminal_Type__c) = &quot;Vx690&quot;, Quantity__c,
IF(TEXT(Terminal_Type__c) = &quot;Vx520/820&quot;, Quantity__c, 0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Vx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>