unpackaged/main/default/objects/WorkOrder/fields/Reason_for_Closing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closing__c</fullName>
    <label>Reason for Closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Pop Up</fullName>
            </value>
            <value>
                <fullName>Sample Sale</fullName>
            </value>
            <value>
                <fullName>Closed store</fullName>
            </value>
            <value>
                <fullName>Ceased trading</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>