unpackaged/main/default/objects/WorkOrder/fields/Reason_for_Deactivating__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deactivating__c</fullName>
    <label>Reason for Deactivating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Pop Up Shop</fullName>
            </value>
            <value>
                <fullName>Sample Sale</fullName>
            </value>
            <value>
                <fullName>No Longer Required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>