unpackaged/main/default/objects/WorkOrder/fields/Remove_POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>Remove_POS_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove POS Solution</label>
    <type>Checkbox</type>
</CustomField>