unpackaged/main/default/objects/WorkOrder/fields/Rental_Return_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Rental_Return_Per_Month__c</fullName>
    <label>Rental Return Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>