unpackaged/main/default/objects/WorkOrder/fields/Rental_Return_Per_Month_Value__c.field-meta.xml
<CustomField>
    <fullName>Rental_Return_Per_Month_Value__c</fullName>
    <formula>VALUE(TEXT(Terminal_Rental_Per_Month__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Return Per Month Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>