unpackaged/main/default/objects/WorkOrder/fields/Shop_Brand_Location__c.field-meta.xml
<CustomField>
    <fullName>Shop_Brand_Location__c</fullName>
    <label>Shop Brand &amp; Location</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>