unpackaged/main/default/objects/WorkOrder/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <formula>TEXT(POS_Solution__r.Solution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution</label>
    <type>Text</type>
</CustomField>