unpackaged/main/default/objects/WorkOrder/fields/Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Store_ID__c</fullName>
    <label>Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>