unpackaged/main/default/objects/WorkOrder/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <formula>TEXT(POS_Solution__r.Terminal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminal</label>
    <type>Text</type>
</CustomField>