unpackaged/main/default/objects/WorkOrder/fields/Terminal_Detail__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terminal Detail</label>
    <referenceTo>Terminal_Detail__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>