unpackaged/main/default/objects/WorkOrder/fields/Terminal_Rental_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Rental_Per_Month__c</fullName>
    <label>Terminal Rental Per Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>£15</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>£17</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>£25</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>£27</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <label>£0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>