unpackaged/main/default/objects/WorkOrder/fields/Terminal_Rental_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Rental_Start_Date__c</fullName>
    <label>Terminal Rental Start Date</label>
    <type>Date</type>
</CustomField>