unpackaged/main/default/objects/WorkOrder/fields/Terminal_Type__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Type__c</fullName>
    <label>Terminal Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Terminal_Type</valueSetName>
    </valueSet>
</CustomField>