unpackaged/main/default/objects/WorkOrder/fields/Terminal_Type_GB__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Type_GB__c</fullName>
    <label>Terminal Type GB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A920</fullName>
            </value>
            <value>
                <fullName>Vx510</fullName>
            </value>
            <value>
                <fullName>Vx520</fullName>
            </value>
            <value>
                <fullName>Vx570</fullName>
            </value>
            <value>
                <fullName>Vx610</fullName>
            </value>
            <value>
                <fullName>Vx670</fullName>
            </value>
            <value>
                <fullName>Vx680 3G</fullName>
            </value>
            <value>
                <fullName>Vx680 BT/Wi-fi</fullName>
            </value>
            <value>
                <fullName>Vx690</fullName>
            </value>
            <value>
                <fullName>Vx810</fullName>
            </value>
            <value>
                <fullName>Vx520/820</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>