unpackaged/main/default/objects/WorkOrder/fields/TF_Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>TF_Current_Provider__c</fullName>
    <formula>INCLUDES(Account.TF_Current_Provider__c, &quot;Caixa&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF Current Provider</label>
    <type>Checkbox</type>
</CustomField>