unpackaged/main/default/objects/WorkOrder/fields/Third_Party_Union_Pay__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Union_Pay__c</fullName>
    <label>Third Party Union Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>