unpackaged/main/default/objects/WorkOrder/fields/TID__c.field-meta.xml
<CustomField>
    <fullName>TID__c</fullName>
    <label>TID</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>