unpackaged/main/default/objects/WorkOrder/fields/TID_Type__c.field-meta.xml
<CustomField>
    <fullName>TID_Type__c</fullName>
    <label>TID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AIB</fullName>
            </value>
            <value>
                <fullName>BMS</fullName>
            </value>
            <value>
                <fullName>BMS + DCC</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Global Payments + DCC</fullName>
            </value>
            <value>
                <fullName>HBOS</fullName>
            </value>
            <value>
                <fullName>HBOS + DCC</fullName>
            </value>
            <value>
                <fullName>Worldpay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>