unpackaged/main/default/objects/WorkOrder/fields/Till_Link_New_Business_Only__c.field-meta.xml
<CustomField>
    <fullName>Till_Link_New_Business_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Till Link (New Business Only)</label>
    <type>Checkbox</type>
</CustomField>