unpackaged/main/default/objects/WorkOrder/fields/Till_System__c.field-meta.xml
<CustomField>
    <fullName>Till_System__c</fullName>
    <formula>POS_Solution__r.Till_System__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Till System</label>
    <type>Text</type>
</CustomField>