unpackaged/main/default/objects/WorkOrder/fields/TRS__c.field-meta.xml
<CustomField>
    <fullName>TRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRS</label>
    <type>Checkbox</type>
</CustomField>