unpackaged/main/default/objects/WorkOrder/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <label>Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Use</valueSetName>
    </valueSet>
</CustomField>