unpackaged/main/default/objects/WorkOrder/fields/VAT_Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Solution_Type__c</fullName>
    <label>VAT Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PA 3rd Party</fullName>
            </value>
            <value>
                <fullName>PAOL</fullName>
            </value>
            <value>
                <fullName>PAX Payments</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>Planet App</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>PT PAX</fullName>
            </value>
            <value>
                <fullName>PTF</fullName>
            </value>
            <value>
                <fullName>POL</fullName>
            </value>
            <value>
                <fullName>POL Pro</fullName>
            </value>
            <value>
                <fullName>POL Pro PAX</fullName>
            </value>
            <value>
                <fullName>AX</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>