unpackaged/main/default/objects/WorkOrder/fields/Visa__c.field-meta.xml
<CustomField>
    <fullName>Visa__c</fullName>
    <label>Visa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>