unpackaged/main/default/objects/WorkOrder/fields/Web_Services__c.field-meta.xml
<CustomField>
    <fullName>Web_Services__c</fullName>
    <label>Web Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>